fixed text overflow on questions, answers, and footer. got rid of set heights too

--- a/frontend/src/components/questions/questions.css
+++ b/frontend/src/components/questions/questions.css
@@ -30,8 +30,8 @@
 }
 
 .trivia-q {
+   word-wrap: break-word;
    width: 20%;
-   height: 200px;
    margin: 20px 10px;
    border-radius: 20px;
    border: 4px solid black;
@@ -58,9 +58,9 @@
 }
 
 .answer-footer {
+   word-wrap: break-word;
    margin-right: 100px;
    width: 37%;
-   height: 280px;
    margin: 0px 10px;
    border-radius: 20px;
    border: 4px solid black;
